[tool.poetry]
name = "prometheus-sanic"
version = "0.1.0"
description = "Exposes Prometheus monitoring metrics of Sanic apps."
authors = ["skar404 <skar404@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
